WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268667
[iOS 17.4] Blink crashes on launch due to an unrecognized selector on WKExtendedTextInputTraits
https://bugs.webkit.org/show_bug.cgi?id=268667
Summary
[iOS 17.4] Blink crashes on launch due to an unrecognized selector on WKExten...
Wenson Hsieh
Reported
2024-02-02 15:35:03 PST
rdar://122025854
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-02-02 17:07:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23791
EWS
Comment 2
2024-02-02 21:48:49 PST
Committed
274035@main
(674f7d1c60a7): <
https://commits.webkit.org/274035@main
> Reviewed commits have been landed. Closing PR #23791 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug